<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!-- Project Identification -->
  <groupId>com.food.ordering.system</groupId>
  <artifactId>food-ordering-system</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>
  <!-- Project Identification -->
  <name>Food Ordering System</name>
  <description>Microservices :: Clean Architecture :: DDD :: Saga :: Outbox &amp; Kafka</description>
  <!-- Props -->
  <properties>
    <!-- Quarkus -->
    <quarkus.platform.version>2.15.3.Final</quarkus.platform.version>
    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
    <!-- Maven -->
    <skipITs>false</skipITs>
    <maven.compiler.release>17</maven.compiler.release>
    <compiler-plugin.version>3.10.1</compiler-plugin.version>
    <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
    <failfalse-plugin.version>3.0.0-M7</failfalse-plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <!-- BOM -->
  <dependencyManagement>
    <!-- Quarkus -->
    <dependencies>
      <dependency>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>${quarkus.platform.artifact-id}</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- Apache Camel -->
      <dependency>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>quarkus-camel-bom</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- Food Ordering Service -->
      <dependency>
        <groupId>com.food.ordering.system.order.service.domain.core</groupId>
        <artifactId>core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system.order.service.domain.service</groupId>
        <artifactId>service</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system.order.service.application</groupId>
        <artifactId>application</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system.order.service.dataaccess</groupId>
        <artifactId>dataaccess</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>com.food.ordering.system.order.service.domain.messaging</groupId>
        <artifactId>messaging</artifactId>
        <version>1.0</version>
      </dependency>
      <!-- Food Shared Domain -->
      <dependency>
        <groupId>com.food.ordering.system.shared.domain</groupId>
        <artifactId>shared-domain</artifactId>
        <version>1.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- Common Dependencies -->

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.24</version>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-arc</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit5</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Camel Test -->
    <dependency>
      <groupId>org.apache.camel.quarkus</groupId>
      <artifactId>camel-quarkus-junit5</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.quarkus</groupId>
      <artifactId>camel-quarkus-mock</artifactId>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <!-- Build -->
  <build>
    <plugins>
      <plugin>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${quarkus.platform.version}</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
              <goal>generate-code</goal>
              <goal>generate-code-tests</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler-plugin.version}</version>
        <configuration>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            <maven.home>${maven.home}</maven.home>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${failfalse-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
            <configuration>
              <systemPropertyVariables>
                <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                <maven.home>${maven.home}</maven.home>
              </systemPropertyVariables>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <skipITs>false</skipITs>
        <quarkus.package.type>native</quarkus.package.type>
      </properties>
    </profile>
  </profiles>
  <modules>
    <module>shared</module>
    <module>order-service</module>
  </modules>
</project>